--- a/小米商城/css/index.css
+++ b/小米商城/css/index.css
@@ -16,11 +16,11 @@
 /* 登录栏开始 */
 @font-face {
   font-family: 'iconfont';  /* project id 494727 */
-  src: url('http://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.eot');
-  src: url('http://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.eot?#iefix') format('embedded-opentype'),
-  url('http://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.woff') format('woff'),
-  url('http://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.ttf') format('truetype'),
-  url('http://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.svg#iconfont') format('svg');
+  src: url('https://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.eot');
+  src: url('https://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.eot?#iefix') format('embedded-opentype'),
+  url('https://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.woff') format('woff'),
+  url('https://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.ttf') format('truetype'),
+  url('https://at.alicdn.com/t/font_494727_dxrfgxt2h0uxflxr.svg#iconfont') format('svg');
 }
 .header{
 	width: 100%;
